# onramp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORY.md  README.md  SECURITY.md  demo.sh  dev.sh  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py  security.py  startup.py
backend/app/api/: concurrency.py  dependencies.py  error_codes.py  exception_handlers.py  tenant_scope.py  versioning.py
backend/app/auth/: __init__.py  entra.py  (+1 more)
backend/tests/: conftest.py  test_accelerator_bicep_parametrized.py  test_adr.py  test_ai_eval.py  test_ai_foundry.py  test_ai_foundry_extended.py  test_ai_quality.py  test_ai_validator.py  test_aiml_accelerator.py  test_api_integration.py  test_api_versioning.py  test_approval_service.py  test_arch_versioning.py  test_archetypes.py  test_architecture_comparator.py  test_architecture_compare.py  test_architecture_validator.py  test_arm_generator.py  test_audit_service.py  test_auth_security.py  test_avd_accelerator.py  test_azure_devops_generator.py  test_bicep_generator.py  test_chat_page.py  test_china.py  test_cloud_config.py  test_cloud_config_service.py  test_collaboration.py  test_collaboration_service.py  test_compliance.py  test_compliance_scoring.py  test_concurrency.py  test_confidential_computing.py  test_config.py  test_content_safety.py  test_conversation_manager.py  test_cost_manager.py  test_credentials.py  test_credentials_extended.py  test_cross_format.py  (+91 more)
(+596 files in other folders)
